FetchFeed: Add extra key to DDB params

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,7 +29,15 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
-      "dependsOn": []
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "tsunamialert",
+          "attributes": [
+            "GraphQLAPIIdOutput"
+          ]
+        }
+      ]
     },
     "checkFeeds": {
       "build": true,
