--- a/amplify/backend/auth/tsunamialert97a1c8ba/tsunamialert97a1c8ba-cloudformation-template.yml
+++ b/amplify/backend/auth/tsunamialert97a1c8ba/tsunamialert97a1c8ba-cloudformation-template.yml
@@ -145,7 +145,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'tsunamaa8d88b2_sns-role', !Join ['',[ 'sns', 'aa8d88b2', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'tsunam97a1c8ba_sns-role', !Join ['',[ 'sns', '97a1c8ba', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -157,10 +157,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: tsunamaa8d88b2_role_external_id
+                sts:ExternalId: tsunam97a1c8ba_role_external_id
       Policies:
         -
-          PolicyName: tsunamaa8d88b2-sns-policy
+          PolicyName: tsunam97a1c8ba-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -212,7 +212,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: tsunamaa8d88b2_role_external_id
+        ExternalId: tsunam97a1c8ba_role_external_id
     
   
   UserPoolClientWeb:
@@ -220,7 +220,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: tsunamaa8d88b2_app_clientWeb
+      ClientName: tsunam97a1c8ba_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -230,7 +230,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: tsunamaa8d88b2_app_client
+      ClientName: tsunam97a1c8ba_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -241,7 +241,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'aa8d88b2', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '97a1c8ba', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -295,7 +295,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: tsunamaa8d88b2_userpoolclient_lambda_iam_policy
+      PolicyName: tsunam97a1c8ba_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -312,7 +312,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: tsunamaa8d88b2_userpoolclient_lambda_log_policy
+      PolicyName: tsunam97a1c8ba_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -352,7 +352,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'tsunamialertaa8d88b2_identitypool_aa8d88b2', !Join ['',['tsunamialertaa8d88b2_identitypool_aa8d88b2', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'tsunamialert97a1c8ba_identitypool_97a1c8ba', !Join ['',['tsunamialert97a1c8ba_identitypool_97a1c8ba', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
