--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -53,5 +53,12 @@
         }
       ]
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "providerPlugin": "awscloudformation",
+      "type": "manual"
+    }
   }
 }
