--- a/amplify/backend/function/onPhoneCreate/src/package.json
+++ b/amplify/backend/function/onPhoneCreate/src/package.json
@@ -6,6 +6,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "aws-sdk": "^2.829.0",
-    "es6-promisify": "^6.1.1"
+    "es6-promisify": "^6.1.1",
+    "random-number-csprng": "^1.0.2"
   }
 }
