--- a/amplify/backend/function/sendVerificationCode/src/package.json
+++ b/amplify/backend/function/sendVerificationCode/src/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "aws-sdk": "^2.829.0",
-    "es6-promisify": "^6.1.1"
+    "@aws-sdk/client-sns": "^3.3.0"
   }
 }
