--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/auth": "^3.4.17",
     "@aws-amplify/ui-components": "^0.10.0",
     "@aws-amplify/ui-react": "^0.2.34",
     "@reduxjs/toolkit": "^1.5.0",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "aws-amplify": "^3.3.14",
+    "dotenv": "^8.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
