Adjust createPhone lambda

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -171,9 +171,9 @@
         },
         {
           "category": "function",
-          "resourceName": "tsunamiSharedLayer",
+          "resourceName": "sendVerificationCode",
           "attributes": [
-            "Arn"
+            "Name"
           ]
         }
       ]
