--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.10.3",
     "aws-amplify": "^3.3.14",
     "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
