--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@aws-amplify/auth": "^3.4.17",
     "@aws-amplify/ui-components": "^0.10.0",
     "@aws-amplify/ui-react": "^0.2.34",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.10.3",
     "aws-amplify": "^3.3.14",
+    "clsx": "^1.1.1",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
