Revise handleConfirmVerificationCode and createPhone functions

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -175,6 +175,13 @@
           "attributes": [
             "Name"
           ]
+        },
+        {
+          "category": "function",
+          "resourceName": "tsunamiSharedLayer",
+          "attributes": [
+            "Arn"
+          ]
         }
       ]
     }
