--- a/amplify/backend/function/tsunamiSharedLayer/lib/nodejs/package.json
+++ b/amplify/backend/function/tsunamiSharedLayer/lib/nodejs/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-sns": "^3.3.0",
     "aws-sdk": "^2.831.0",
     "es6-promisify": "^6.1.1",
+    "libphonenumber-js": "^1.9.11",
     "random-number-csprng": "^1.0.2",
     "rss-parser": "^3.10.0"
   },
